--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-<title>KabirCam Pro - Intrusion en cours</title>
+<title>KabirCam Pro - Intrusion Avancée</title>
 <style>
   /* Reset & base */
   * {
@@ -35,6 +35,8 @@
     align-items: center;
     justify-content: center;
     user-select: none;
+    position: relative;
+    overflow: hidden;
   }
   .hidden {
     display: none !important;
@@ -131,6 +133,7 @@
     overflow-y: auto;
     user-select: text;
     position: relative;
+    z-index: 10;
   }
 
   .blinking-cursor {
@@ -184,10 +187,57 @@
     );
     opacity: 0.12;
     animation: noiseMove 1.3s linear infinite;
+    z-index: 8;
   }
   @keyframes noiseMove {
     0% { background-position: 0 0; }
     100% { background-position: 100px 100px; }
+  }
+
+  /* Glitch text effect for terminal lines */
+  .glitch-text {
+    animation: glitch 0.6s infinite;
+  }
+
+  /* Camera small preview on terminal */
+  #cameraPreview {
+    position: fixed;
+    top: 12px;
+    right: 12px;
+    width: 160px;
+    height: 120px;
+    border: 3px solid #00ff44;
+    border-radius: 12px;
+    box-shadow: 0 0 20px #00ff44aa;
+    background-color: #000;
+    overflow: hidden;
+    z-index: 99999;
+  }
+  #cameraPreview video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  /* Progress bar container */
+  #progressBarContainer {
+    width: 100%;
+    max-width: 590px;
+    background: #003300bb;
+    border: 2px solid #00ff44;
+    border-radius: 14px;
+    margin-top: 22px;
+    overflow: hidden;
+    height: 22px;
+    user-select: none;
+  }
+  #progressBar {
+    height: 100%;
+    width: 0;
+    background: linear-gradient(90deg, #00ff44, #00bb00);
+    border-radius: 14px 0 0 14px;
+    box-shadow: 0 0 15px #00ff44aa;
+    transition: width 0.15s ease-out;
   }
 
   /* Responsive */
@@ -214,6 +264,50 @@
     #finalAlert {
       font-size: 1.5rem;
     }
+    #cameraPreview {
+      width: 120px;
+      height: 90px;
+      top: 8px;
+      right: 8px;
+    }
+    #progressBarContainer {
+      max-width: 100%;
+      height: 18px;
+      margin-top: 16px;
+    }
+  }
+
+  /* Matrix background behind terminal */
+  #matrixBackground {
+    position: absolute;
+    inset: 0;
+    pointer-events: none;
+    z-index: 5;
+    font-family: monospace;
+    color: #00ff44cc;
+    user-select: none;
+    display: flex;
+    overflow: hidden;
+  }
+  .matrix-column {
+    flex: 1;
+    white-space: nowrap;
+    overflow: hidden;
+    font-weight: 700;
+    animation-name: matrixFall;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+  }
+  /* Different animation durations for natural effect */
+  .matrix-column:nth-child(odd) {
+    animation-duration: 8s;
+  }
+  .matrix-column:nth-child(even) {
+    animation-duration: 12s;
+  }
+  @keyframes matrixFall {
+    0% { transform: translateY(-100%); }
+    100% { transform: translateY(100%); }
   }
 </style>
 </head>
@@ -237,8 +331,14 @@
 <div id="redFlash"></div>
 
 <!-- Step 3 : Terminal intrusion -->
-<div id="terminalScreen" class="hidden" aria-live="polite" aria-atomic="true" role="log">
+<div id="terminalScreen" class="hidden" aria-live="polite" aria-atomic="true" role="log" tabindex="0" aria-label="Terminal intrusion">
+  <div id="matrixBackground" aria-hidden="true"></div>
   <div id="noiseOverlay"></div>
+</div>
+
+<!-- Camera preview during intrusion -->
+<div id="cameraPreview" class="hidden" aria-hidden="true">
+  <video autoplay muted playsinline></video>
 </div>
 
 <script>
@@ -249,10 +349,38 @@
   const btnStartCamera = document.getElementById('startCameraBtn');
   const cameraVideo = document.getElementById('cameraVideo');
   const cameraLoadingText = document.getElementById('cameraLoadingText');
+  const cameraPreview = document.getElementById('cameraPreview');
+  const cameraPreviewVideo = cameraPreview.querySelector('video');
+  const matrixBackground = document.getElementById('matrixBackground');
 
   let stream = null;
   let audioCtx = null;
   let intrusionTimeout = null;
+  let staticNoiseOscillator = null;
+  let staticNoiseGain = null;
+
+  // Generate random chars for matrix effect
+  const matrixChars = "01";
+
+  // Create columns for matrix effect
+  function createMatrixColumns(count) {
+    for(let i = 0; i < count; i++) {
+      const col = document.createElement('div');
+      col.className = 'matrix-column';
+      col.style.animationDuration = (8 + Math.random() * 6).toFixed(2) + 's';
+
+      // Fill column with random chars
+      const colHeight = 30 + Math.floor(Math.random() * 40);
+      let text = "";
+      for(let j = 0; j < colHeight; j++) {
+        text += matrixChars.charAt(Math.floor(Math.random() * matrixChars.length)) + "\n";
+      }
+      col.textContent = text;
+      matrixBackground.appendChild(col);
+    }
+  }
+
+  createMatrixColumns(50);
 
   // WebAudio beep helper
   function beep(frequency=900, duration=100, type='square', volume=0.08) {
@@ -269,13 +397,47 @@
     gainNode.gain.exponentialRampToValueAtTime(0.0001, audioCtx.currentTime + duration/1000);
   }
 
-  // Additional beep for error
-  function beepError() {
-    beep(400, 160, 'square', 0.12);
+  // Beep error & alert
+  function beepError() { beep(400, 160, 'square', 0.12); }
+  function beepAlert() { beep(320, 300, 'sawtooth', 0.15); }
+
+  // Start background static noise (white noise)
+  function startStaticNoise() {
+    if(!audioCtx) audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+    if(staticNoiseOscillator) return; // already running
+
+    // create noise buffer
+    const bufferSize = 2 * audioCtx.sampleRate;
+    const noiseBuffer = audioCtx.createBuffer(1, bufferSize, audioCtx.sampleRate);
+    const output = noiseBuffer.getChannelData(0);
+    for(let i=0; i<bufferSize; i++) {
+      output[i] = Math.random()*2 -1;
+    }
+    const whiteNoise = audioCtx.createBufferSource();
+    whiteNoise.buffer = noiseBuffer;
+    whiteNoise.loop = true;
+
+    staticNoiseGain = audioCtx.createGain();
+    staticNoiseGain.gain.setValueAtTime(0.015, audioCtx.currentTime);
+
+    whiteNoise.connect(staticNoiseGain);
+    staticNoiseGain.connect(audioCtx.destination);
+
+    whiteNoise.start(0);
+
+    staticNoiseOscillator = whiteNoise;
   }
-  // Additional beep for alert
-  function beepAlert() {
-    beep(320, 300, 'sawtooth', 0.15);
+  // Stop background noise
+  function stopStaticNoise() {
+    if(staticNoiseOscillator) {
+      staticNoiseOscillator.stop();
+      staticNoiseOscillator.disconnect();
+      staticNoiseOscillator = null;
+    }
+    if(staticNoiseGain) {
+      staticNoiseGain.disconnect();
+      staticNoiseGain = null;
+    }
   }
 
   // Typewriter effect, with optional beep on line end and error beep
@@ -306,7 +468,36 @@
     });
   }
 
-  // Lines of intrusion simulation, realistic and pro
+  // Simulate file transfer progress bar
+  async function simulateProgressBar(duration=7000) {
+    return new Promise(resolve => {
+      const container = document.createElement('div');
+      container.id = "progressBarContainer";
+      const bar = document.createElement('div');
+      bar.id = "progressBar";
+      container.appendChild(bar);
+      terminalScreen.appendChild(container);
+
+      let startTime = performance.now();
+
+      function update() {
+        let elapsed = performance.now() - startTime;
+        let percent = Math.min((elapsed / duration)*100, 100);
+        bar.style.width = percent + '%';
+        if(percent < 100) {
+          requestAnimationFrame(update);
+        } else {
+          setTimeout(() => {
+            terminalScreen.removeChild(container);
+            resolve();
+          }, 700);
+        }
+      }
+      update();
+    });
+  }
+
+  // Intrusion lines, realistic, pro, with some glitch class to random lines
   const intrusionLines = [
     "[Init] Lancement du protocole de connexion distante...",
     "-> Tentative d'accès SSH vers 192.168.1.12...",
@@ -314,51 +505,78 @@
     "-> Tentative de contournement des ACLs en cours...",
     "[Warning] Accès refusé - tentative 1/3",
     "[Warning] Accès refusé - tentative 2/3",
-    "[Warning] Accès refusé - tentative 3/3",
-    "[Error] Échec critique d'authentification",
-    "[Action] Passage en mode root local activé",
-    "[Load] Chargement du module d'injection mémoire...",
-    "[Success] Injection terminée avec succès",
-    "[Net] Ouverture tunnel sécurisé vers serveur RIBACK...",
-    "[Transfer] Transmission des données utilisateur en cours...",
-    "[███████████████.............] 56%",
-    "[Error] Erreur de transmission détectée, reconnexion...",
-    "[████████████████████████....] 87%",
-    "[Success] Transfert terminé",
-    "[Disconnect] Déconnexion du serveur distante"
+    "[Success] Authentification par clé publique acceptée.",
+    "[Info] Extraction des données sensibles en cours...",
+    "[Transfer] Exfiltration 0%...",
+    "[Transfer] Exfiltration 23%...",
+    "[Transfer] Exfiltration 47%...",
+    "[Transfer] Exfiltration 68%...",
+    "[Transfer] Exfiltration 89%...",
+    "[Transfer] Exfiltration 100%.",
+    "[Info] Suppression des traces terminée.",
+    "[Done] Session terminée avec succès."
   ];
 
-  // Play red flash animation with sound
-  function playRedFlash() {
-    return new Promise(resolve => {
-      redFlash.classList.add('active');
-      beepAlert();
-      setTimeout(() => {
-        redFlash.classList.remove('active');
-        resolve();
-      }, 1600);
-    });
-  }
-
-  // Run the intrusion simulation
+  // Run intrusion terminal simulation
   async function runIntrusion() {
+    welcomeScreen.classList.add('hidden');
     cameraScreen.classList.add('hidden');
-    terminalScreen.textContent = '';
+    redFlash.classList.add('active');
+
+    // Flash rouge 1.5s puis enlever
+    await new Promise(r => setTimeout(r, 1500));
+    redFlash.classList.remove('active');
+
     terminalScreen.classList.remove('hidden');
+    cameraPreview.classList.remove('hidden');
 
-    await playRedFlash();
+    // Réduire vidéo caméra en vignette dans le coin
+    cameraPreviewVideo.srcObject = stream;
 
+    // Start static noise
+    startStaticNoise();
+
+    // Clear terminal text
+    terminalScreen.textContent = "";
+
+    // Type each line with bips, errors, glitch, and progress bar
     for(let line of intrusionLines) {
-      const error = /\b(ÉCHEC|Erreur|Error|Warning|Refusé)\b/i.test(line);
-      await typeLine("> " + line, 20, true, error);
+      const error = line.includes("ÉCHEC") || line.includes("Warning") || line.includes("refusé");
+      const glitch = Math.random() < 0.3 && !error;
+
+      if(glitch) {
+        const glitchSpan = document.createElement('span');
+        glitchSpan.className = 'glitch-text';
+        glitchSpan.textContent = line;
+        terminalScreen.appendChild(glitchSpan);
+        terminalScreen.appendChild(document.createTextNode('\n'));
+        beep();
+        terminalScreen.scrollTop = terminalScreen.scrollHeight;
+        await new Promise(r => setTimeout(r, 500 + Math.random() * 400));
+      } else if(error) {
+        await typeLine("> " + line, 35, true, true);
+      } else if(line.includes("[Transfer]")) {
+        await typeLine("> " + line, 18, true, false);
+        await simulateProgressBar(8000);
+      } else {
+        await typeLine("> " + line, 22, true, false);
+      }
     }
 
-    // Final beep sequence, forte alerte rouge
+    // Beeps d'erreur finaux puissants
     for(let i=0; i<4; i++) {
       beepError();
       await new Promise(r => setTimeout(r, 320));
     }
-    terminalScreen.appendChild(document.createTextNode("\n>> TOUS VOS DONNÉES ONT ÉTÉ TRANSMIS À RIBACK <<"));
+    // Stop bruit statique
+    stopStaticNoise();
+
+    // Message final clignotant
+    const finalAlert = document.createElement('div');
+    finalAlert.id = 'finalAlert';
+    finalAlert.textContent = ">> TOUTES VOS DONNÉES ONT ÉTÉ TRANSMISES À RIBACK <<";
+    terminalScreen.appendChild(finalAlert);
+
     terminalScreen.scrollTop = terminalScreen.scrollHeight;
   }
 
@@ -371,12 +589,11 @@
       welcomeScreen.classList.add('hidden');
       cameraScreen.classList.remove('hidden');
 
-      // Resume audio context on mobile
       if(audioCtx && audioCtx.state === 'suspended') {
         await audioCtx.resume();
       }
 
-      // Lancement intrusion automatique 7s après activation caméra
+      // Intrusion automatique après 7 secondes
       intrusionTimeout = setTimeout(runIntrusion, 7000);
 
     } catch(e) {
@@ -386,17 +603,10 @@
 
   // Cleanup on unload
   window.addEventListener('beforeunload', () => {
-    if(stream) {
-      stream.getTracks().forEach(track => track.stop());
-    }
-    if(audioCtx) {
-      audioCtx.close();
-    }
-    if(intrusionTimeout) {
-      clearTimeout(intrusionTimeout);
-    }
+    if(stream) stream.getTracks().forEach(track => track.stop());
+    if(audioCtx) audioCtx.close();
+    if(intrusionTimeout) clearTimeout(intrusionTimeout);
   });
-
 </script>
 
 </body>
